--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html>
-<script src="teste.js" type="text/javascript"></script>
+<html   ng-app="fossnote">
+
 <head>
-    <title>Fossnote is Born!!!</title>
+    <title>Fossnote V.0.0.1</title>
+    <link rel="stylesheet" href="bower_components/foundation5/css/foundation.css">
+    <link rel="stylesheet" href="resources/css/app.css">
+
+    <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
+    <script src="bower_components/angular-foundation/mm-foundation-tpls.min.js" type="text/javascript"></script>
+    <script src="bower_components/pouchdb/dist/pouchdb.min.js" type="text/javascript"></script>
+    <script src="app/init.js" type="text/javascript"></script>
+    <script src="app/list.js" type="text/javascript"></script>
 </head>
-<body>
-<h1>Super preiro app que roda no meu arch</h1>
-usando nodejs ver <script>document.write(process.version)</script>.
+<body  ng-controller="initCtrl">
+
+
+<div class="off-canvas-wrap app-container">
+    <div class="inner-wrap app-container">
+        <nav class="tab-bar">
+            <section class="left-small ">
+                <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+            </section>
+            <section class="middle tab-bar-section">
+                <input style="margin-top: 8px; height: 28px;" type="text" placeholder="Busca" />
+            </section>
+            <section class="right-small">
+                <button class="addbutton"> &#43;  </button>
+            </section>
+        </nav>
+
+        <aside class="left-off-canvas-menu">
+            <ul class="off-canvas-list">
+                <li><label>Notebooks</label></li>
+                <li><a href="#">Arch</a></li>
+                <li><a href="#">Ubuntu</a></li>
+                <li><a href="#">Banco</a></li>
+                <li><a href="#">Segredos</a></li>
+            </ul>
+        </aside>
+
+        <section class="main-section">
+            <div ng-view></div>
+
+
+        </section>
+
+        <a class="exit-off-canvas"></a>
+    </div>
+</div>
+
+
+
+
+
 </body>
 </html>
+
