--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
             </section>
             <section class="middle tab-bar-section">
-                <input style="margin-top: 8px; height: 28px;" type="text" placeholder="Busca" />
+                <div class="centerSearch">
+                   <input class="buscaNota"  type="search"  placeholder="Busca" />
+                </div>
+
             </section>
             <section class="right-small">
                 <button class="addbutton"> &#43;  </button>
